[gd_scene load_steps=5 format=3 uid="uid://cecr7pfc8nlvj"]

[ext_resource type="Script" path="res://Scripts/slot.gd" id="1_s5d5m"]
[ext_resource type="Texture2D" uid="uid://barjaiilyatqn" path="res://Assets/cards/empty_slot.png" id="2_u2qq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3luj8"]
atlas = ExtResource("2_u2qq0")
region = Rect2(0, 0, 100, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_wmw1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3luj8")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[node name="slot" type="Node2D"]
z_index = 10
script = ExtResource("1_s5d5m")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -34.0
offset_top = -60.0
offset_right = -26.0
offset_bottom = -52.0
scale = Vector2(8.64, 14.76)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wmw1j")

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
